--- a/Final_Data_Cleaning.Rmd
+++ b/Final_Data_Cleaning.Rmd
@@ -490,6 +490,41 @@ ps #View object and make sure it has all 3 parts
 ```
 
 
+##Cleaning the OTU table 
+First it is important to observe a basic description of the OTU. 
+```{r}
+#Summary of OTU
+ntaxa(ps)
+rank_names(ps)
+
+
+#Summarize sequencing depths 
+sdt = data.frame(as(sample_data(ps), "data.frame"),
+                 TotalReads = sample_sums(ps), keep.rownames = TRUE)
+setNames("rn", "SampleID")
+pSeqDepth = ggplot(sdt, aes(TotalReads)) + geom_histogram() + ggtitle("Sequencing Depth")
+pSeqDepth
+
+#1000 Reads total
+```
+
+Filtering rare taxa is usually a necessary step in this type of data. We will actually perform the filtering elsewhere. For now, just explore the distribution of taxa across the dataset. There are two obvious measures to consider right away: (1) prevalence - the number of samples in which a taxa appears, and (2) total counts - the total number (or proportion) of observations of a taxa across all samples.
+
+```{r}
+tdt = data.frame(tax_table(ps),
+                 TotalCounts = taxa_sums(ps),
+                 OTU = taxa_names(ps))
+ggplot(tdt, aes(TotalCounts)) + 
+  geom_histogram() + 
+  ggtitle("Histogram of Total Counts")
+
+##Seems like an odd number of counts.... doublecheck.
+```
+
+
+
+
+
 
 
 
